--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: parad0x3r # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Learning Web Sec... # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -26,23 +26,23 @@ description: >- # used by seo meta and the atom feed
 url: "https://parad0x3r.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: paradx3r # change to your github username
 
-twitter:
-  username: twitter_username # change to your twitter username
+# twitter:
+#   username: twitter_username # change to your twitter username
 
-social:
-  # Change to your full name.
-  # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
-  links:
-    # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+# social:
+#   # Change to your full name.
+#   # It will be displayed as the default author of the posts and the copyright owner in the Footer
+#   name: your_full_name
+#   email: example@domain.com # change to your email address
+#   links:
+#     # The first element serves as the copyright owner's link
+#     - https://twitter.com/username # change to your twitter homepage
+#     - https://github.com/username # change to your github homepage
+#     # Uncomment below to add more social links
+#     # - https://www.facebook.com/username
+#     # - https://www.linkedin.com/in/username
 
 # Site Verification Settings
 webmaster_verifications:
@@ -96,7 +96,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: ghttps://avatars.githubusercontent.com/u/151050396?v=4
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
