--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
-# e.g. 'https://username.github.io', note that it does not end with a '/'.
+# e.g. 'https://username.github.io', note that it does not endsssswith a '/'.
 url: "https://parad0x3r.github.io"
 
 github:
