--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: ghttps://avatars.githubusercontent.com/u/151050396?v=4
+avatar: https://avatars.githubusercontent.com/u/151050396?v=4
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
