--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: parad0x3r # the main title
 
-tagline: Learning Web Sec... # it will display as the sub-title
+tagline: Learning Web Sec..  # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
