--- a/_config.yml
+++ b/_config.yml
@@ -178,7 +178,7 @@ defaults:
       comments: true # Enable comments in posts.
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
-      # to update the code of all other post links in this project.
+      # to update the code of all other post links this project.
       permalink: /posts/:title/
   - scope:
       path: _drafts
