--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -13,7 +13,7 @@
 - type: rss
   icon: "fas fa-rss"
   noblank: true
-# Uncomment and complete the url below to enable more contact options
+# Uncomment and complete the url blow to enable more contact options
 #
 # - type: mastodon
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
